--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="app"></div>
-
+    <div id="modal-app-el"></div>
     <script src="/dist/bundle.js"></script>
 </body>
 </html>
